advanced/services-aws.yaml
apiVersion: v1
kind: Service
metadata:
  name: fleetman-webapp
  
spec:
  # This defines which pods are going to be represented by this service
  # The service becomes a network endpoint for either other services 
  # or maybe external users to connect to (eg browser).
  selector:
    app: webapp
    
  ports:
    - name: http
      port: 80
      
  type: ClusterIP
  
  
---

apiVersion: v1
kind: Service
metadata:
  name: fleetman-queue
  
spec:
  # This defines which pods are going to be represented by this service
  # The service becomes a network endpoint for either other services 
  # or maybe external users to connect to (eg browser).
  selector:
    app: queue
    
  ports:
    - name: http
      port: 8161
      
    - name: endpoint
      port: 61616
      
  type: ClusterIP
  
  

---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-position-tracker
  
spec:
  # This defines which pods are going to be represented by this service
  # The service becomes a network endpoint for either other services 
  # or maybe external users to connect to (eg browser).
  selector:
    app: position-tracker
    
  ports:
    - name: http
      port: 8080
      
  type: ClusterIP

  
---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-api-gateway
  
spec:
  # This defines which pods are going to be represented by this service
  # The service becomes a network endpoint for either other services 
  # or maybe external users to connect to (eg browser).
  selector:
    app: api-gateway
    
  ports:
    - name: http
      port: 8080     
      
  type: ClusterIP
